# discord_gateway

./: .gitignore  Cargo.toml
src/: api.rs  error.rs  events.rs  gateway.rs  main.rs  payload.rs
