[package]
name = "dc_gw"
version = "0.1.0"
authors = ["oralcagan <oralcagan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serde_repr = "0.1.7"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.6.2", features = ["full"] }
futures-util = "0.3.15"
futures = "0.3.15"
tokio-tungstenite = {version = "0.14.0", features = ["native-tls"]}